@@ -1229,5 +1229,30 @@
             </locale>
         </schema>
 
+        <schema>
+            <key>/schemas/desktop/gnome/thumbnailers/application@x-linguist/enable</key>
+            <applyto>/desktop/gnome/thumbnailers/application@x-linguist/enable</applyto>
+            <owner>nailer</owner>
+            <type>bool</type>
+            <default>true</default>
+            <locale name="C">
+                <short></short>
+                <long></long>
+            </locale>
+        </schema>
+
+        <schema>
+            <key>/schemas/desktop/gnome/thumbnailers/application@x-linguist/command</key>
+            <applyto>/desktop/gnome/thumbnailers/application@x-linguist/command</applyto>
+            <owner>nailer</owner>
+            <type>string</type>
+            <default>/usr/bin/nailer %i %o %s</default>
+            <locale name="C">
+                <short></short>
+                <long></long>
+            </locale>
+        </schema>
+
+
     </schemalist>
 </gconfschemafile>
